# kman

./: .deepsource.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml  pythonpackage2.yml
docs/: _config.yml  index.md
kman/: __init__.py  abundance.py  batch.py  batcher.py  const.py  io.py  join.py  kmer.py  kmer_old.py  parsers.py  seq.py
kman/scripts/: __init__.py  arguments.py  kmer.py  kmer_batch.py  kmer_count.py  kmer_uniq.py
kman/test/: test_batch.py  test_batcher.py  test_seq.py
kman/tests/: test_batch.py  test_seq.py
kmermaid/: __init__.py  abundance.py  batch.py  batch2.py  batcher.py  io.py  join.py  parsers.py  seq.py
kmermaid/scripts/: __init__.py  arguments.py  kmer.py  kmer_batch.py  kmer_count.py  kmer_uniq.py
kmermaid/tests/: test_batch.py  test_seq.py
tests/: test_batch.py  test_batch2.py  test_seq.py
