[tool.poetry]
name = "kmermaid"
version = "1.0.0b0"
description = "K-mer management tools"
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ggirelli/kmermaid"
repository = "https://github.com/ggirelli/kmermaid"
keywords = ["biology", "DNA", "RNA", "kmer", "oligomer", "uniq", "unique", "count", "sequence"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "CHANGELOG.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.78"
click = "^8.0.3"
h5py = "^3.2.1"
joblib = "^1.0.1"
numpy = "^1.20.1"
oligo_melting = {git = "https://github.com/ggirelli/oligo-melting", rev = "301b2c8"}
rich = ">=9.10,<11.0"
tqdm = "^4.58.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.910"
black = "^21.9b0"
safety = "^1.10.3"
bandit = "^1.7.0"
isort = "^5.9.3"
darglint = "^1.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"kmer" = "kmermaid.scripts.kmer:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
